--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             <p class="text-justify" style="line-height: 1cm; font-size: 18px">
               My primary school was <strong>SDN Menteng 02</strong> in central Jakarta.
               Not far from there, i continue my study to Junior High School at <strong>SMPN 1 Jakarta</strong>. 
-              After graduated, i step up to Senior High School at <strong>SMAN 113 Jakarta</strong>
-              near from where now im living. Alhamdulillah now im working on my bachelor degree at 
+              After graduated, i step up to Senior High School that is near from where now im living, 
+              <strong>SMAN 113 Jakarta</strong>. Alhamdulillah now im working on my bachelor degree at 
               <strong>Universitas Negeri Jakarta</strong> and really proud of it.
               </p>
 
@@ -143,7 +143,7 @@
       </section>
       <!--Section: Study-->
 
-      <section id="education">
+      <section id="award">
 
         <!--Grid row-->
         <div class="row wow fadeIn">
@@ -155,8 +155,8 @@
             <h3 class="h3 mb-4">Award</h3>
 
             <p class="text-justify" style="line-height: 1cm; font-size: 18px">
-              Well with willingness and effort to learn new things alongside working in so much course and tasks in class, 
-              i have some award achieved in university outside the class despite many chances i failed to won. 
+              Alongside working in so much course and tasks in class and organzation,
+              i won some competition and have some award achieved in university
               </p>
               <div style="height:15px"></div>
 
@@ -230,304 +230,97 @@
         <!--/Grid row-->
 
       </section>
-      <!--Section: Main features & Quick Start-->
+      <!--Section: Award-->
 
-      <hr class="my-5">
+      <!--Section: Organizations-->
+      <section id="org">
 
-      <!--Section: Not enough-->
-      <section>
+        <!--Grid row-->
+        <div class="row wow fadeIn">
 
-        <h2 class="my-5 h3 text-center">Not enough?</h2>
+          <!--Grid column-->
+          <div class="col-md-2"></div>
+          <div class="col-sm-12 col-md-8">
+            <hr class="my-5">
+            <h3 class="h3 mb-4">Award</h3>
 
-        <!--First row-->
-        <div class="row features-small mb-5 mt-3 wow fadeIn">
+            <p class="text-justify" style="line-height: 1cm; font-size: 18px">
+              Alongside working in so much course and tasks in class and organzation,
+              i won some competition and have some award achieved in university
+              </p>
+              <div style="height:15px"></div>
 
-          <!--First column-->
-          <div class="col-md-4">
-            <!--First row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
+              <!--Award 1-->
+              <div class="row mb-4">
+                <div class="col-1 text-center">
+                  <i class="fas fa-flask fa-lg indigo-text"></i>
+                </div>
+                <div class="col-5">
+                  <h6 class="feature-title">2nd place Men's Futsal</h6>
+                  <p class="grey-text">Chemistry Cup Universitas Negeri Jakarta 2016
+                  </p>
+                </div>
+                <!--Award 2-->
+                <div class="col-1 text-center">
+                  <i class="fas fa-atom fa-lg teal-text"></i>
+                </div>
+                <div class="col-5">
+                  <h6 class="feature-title">2nd place Men's Futsal</h6>
+                  <p class="grey-text">Physics Solidarity Game Universitas Negeri Jakarta 2017
+                  </p>
+                </div>
               </div>
-              <div class="col-10">
-                <h6 class="feature-title">Free for personal and commercial use</h6>
-                <p class="grey-text">Our license is user-friendly. Feel free to use MDB for both private as well as commercial projects.
-                </p>
-                <div style="height:15px"></div>
-              </div>
-            </div>
-            <!--/First row-->
 
-            <!--Second row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
+              <!--Award 3-->
+              <div class="row mb-4">
+                <div class="col-1 text-center">
+                  <i class="fas fa-square-root-alt fa-lg teal-text"></i>
+                </div>
+                <div class="col-5">
+                  <h6 class="feature-title">2nd place Men's Volleyball</h6>
+                  <p class="grey-text">Math League Universitas Negeri Jakarta 2017
+                  </p>
+                </div>
+                <!--Award 4-->
+                <div class="col-1 text-center">
+                  <i class="fas fa-trophy fa-lg indigo-text"></i>
+                </div>
+                <div class="col-5">
+                  <h6 class="feature-title">Scholarship Awardee</h6>
+                  <p class="grey-text">Peningkatan Prestasi Akademik by Kemenristekdikti 2018
+                  </p>
+                </div>
               </div>
-              <div class="col-10">
-                <h6 class="feature-title">400+ UI elements</h6>
-                <p class="grey-text">An impressive collection of flexible components allows you to develop any project.
-                </p>
-                <div style="height:15px"></div>
-              </div>
-            </div>
-            <!--/Second row-->
 
-            <!--Third row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
+              <!--Award 5-->
+              <div class="row mb-4">
+                <div class="col-1 text-center">
+                  <i class="fas fa-dragon fa-lg indigo-text"></i>
+                </div>
+                <div class="col-5">
+                  <h6 class="feature-title">2nd place Story Telling</h6>
+                  <p class="grey-text">Festival Keilmiahan Matematika Universitas Negeri Jakarta 2019
+                  </p>
+                </div>
+                <!--Award 6-->
+                <div class="col-1 text-center">
+                  <i class="fas fa-file-alt fa-lg teal-text"></i>
+                </div>
+                <div class="col-5">
+                  <h6 class="feature-title">2nd place Essay</h6>
+                  <p class="grey-text">Harmoni Cinta Guru Universitas Negeri Jakarta 2019
+                  </p>
+                </div>
               </div>
-              <div class="col-10">
-                <h6 class="feature-title">600+ icons</h6>
-                <p class="grey-text">Hundreds of useful, scalable, vector icons at your disposal.</p>
-                <div style="height:15px"></div>
-              </div>
-            </div>
-            <!--/Third row-->
 
-            <!--Fourth row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
-              </div>
-              <div class="col-10">
-                <h6 class="feature-title">Fully responsive</h6>
-                <p class="grey-text">It doesn't matter whether your project will be displayed on desktop, laptop, tablet or mobile phone. MDB
-                  looks great on each screen.</p>
-                <div style="height:15px"></div>
-              </div>
-            </div>
-            <!--/Fourth row-->
-          </div>
-          <!--/First column-->
-
-          <!--Second column-->
-          <div class="col-md-4 flex-center">
-            <img src="https://mdbootstrap.com/img/Others/screens.png" alt="MDB Magazine Template displayed on iPhone" class="z-depth-0 img-fluid">
-          </div>
-          <!--/Second column-->
-
-          <!--Third column-->
-          <div class="col-md-4 mt-2">
-            <!--First row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
-              </div>
-              <div class="col-10">
-                <h6 class="feature-title">70+ CSS animations</h6>
-                <p class="grey-text">Neat and easy to use animations, which will increase the interactivity of your project and delight your visitors.
-                </p>
-                <div style="height:15px"></div>
-              </div>
-            </div>
-            <!--/First row-->
-
-            <!--Second row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
-              </div>
-              <div class="col-10">
-                <h6 class="feature-title">Plenty of useful templates</h6>
-                <p class="grey-text">Need inspiration? Use one of our predefined templates for free.</p>
-                <div style="height:15px"></div>
-              </div>
-            </div>
-            <!--/Second row-->
-
-            <!--Third row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
-              </div>
-              <div class="col-10">
-                <h6 class="feature-title">Easy installation</h6>
-                <p class="grey-text">5 minutes, a few clicks and... done. You will be surprised at how easy it is.
-                </p>
-                <div style="height:15px"></div>
-              </div>
-            </div>
-            <!--/Third row-->
-
-            <!--Fourth row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-check-circle fa-2x indigo-text"></i>
-              </div>
-              <div class="col-10">
-                <h6 class="feature-title">Easy to use and customize</h6>
-                <p class="grey-text">Using MDB is straightforward and pleasant. Components flexibility allows you deep customization. You will
-                  easily adjust each component to suit your needs.</p>
-                <div style="height:15px"></div>
-              </div>
-            </div>
-            <!--/Fourth row-->
-          </div>
-          <!--/Third column-->
+          </div><div class="col-md-2"></div>
+          <!--/Grid column-->
 
         </div>
-        <!--/First row-->
+        <!--/Grid row-->
 
       </section>
-      <!--Section: Not enough-->
-
-      <hr class="mb-5">
-
-      <!--Section: More-->
-      <section>
-
-        <h2 class="my-5 h3 text-center">...and even more</h2>
-
-        <!--First row-->
-        <div class="row features-small mt-5 wow fadeIn">
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fab fa-firefox fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-              </div>
-              <div class="col-10 mb-2 pl-3">
-                <h5 class="feature-title font-bold mb-1">Cross-browser compatibility</h5>
-                <p class="grey-text mt-2">Chrome, Firefox, IE, Safari, Opera, Microsoft Edge - MDB loves all browsers; all browsers love MDB.
-                </p>
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-level-up-alt fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-              </div>
-              <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">Frequent updates</h5>
-                <p class="grey-text mt-2">MDB becomes better every month. We love the project and enhance as much as possible.
-                </p>
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-comments fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-              </div>
-              <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">Active community</h5>
-                <p class="grey-text mt-2">Our society grows day by day. Visit our forum and check how it is to be a part of our family.
-                </p>
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-              </div>
-              <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">jQuery 3.x</h5>
-                <p class="grey-text mt-2">MDB is integrated with newest jQuery. Therefore you can use all the latest features which come along with
-                  it.
-                </p>
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-        </div>
-        <!--/First row-->
-
-        <!--Second row-->
-        <div class="row features-small mt-4 wow fadeIn">
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-cubes fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-              </div>
-              <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">Modularity</h5>
-                <p class="grey-text mt-2">Material Design for Bootstrap comes with both, compiled, ready to use libraries including all features as
-                  well as modules for CSS (SASS files) and JS.</p>
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-question fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-              </div>
-              <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">Technical support</h5>
-                <p class="grey-text mt-2">We care about reliability. If you have any questions - do not hesitate to contact us.
-                </p>
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="fas fa-th fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-              </div>
-              <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">Flexbox</h5>
-                <p class="grey-text mt-2">MDB fully supports Flex Box. You can forget about alignment issues.</p>
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-          <!--Grid column-->
-          <div class="col-xl-3 col-lg-6">
-            <!--Grid row-->
-            <div class="row">
-              <div class="col-2">
-                <i class="far fa-file-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-              </div>
-              <div class="col-10 mb-2">
-                <h5 class="feature-title font-bold mb-1">SASS files</h5>
-                <p class="grey-text mt-2">Arranged and well documented .scss files can't wait until you compile them.</p>
-              </div>
-            </div>
-            <!--/Grid row-->
-          </div>
-          <!--/Grid column-->
-
-        </div>
-        <!--/Second row-->
-
-      </section>
-      <!--Section: More-->
+      <!--Section: Organizations-->
 
     </div>
   </main>
