add vertical stepper

--- a/index.html
+++ b/index.html
@@ -235,89 +235,81 @@
       <!--Section: Organizations-->
       <section id="org">
 
-        <!--Grid row-->
-        <div class="row wow fadeIn">
+        <!-- Vertical Steppers -->
+		<div class="row mt-1">
+		  <div class="col-md-12">
 
-          <!--Grid column-->
-          <div class="col-md-2"></div>
-          <div class="col-sm-12 col-md-8">
-            <hr class="my-5">
-            <h3 class="h3 mb-4">Award</h3>
+		    <!-- Stepers Wrapper -->
+		    <ul class="stepper stepper-vertical">
 
-            <p class="text-justify" style="line-height: 1cm; font-size: 18px">
-              Alongside working in so much course and tasks in class and organzation,
-              i won some competition and have some award achieved in university
-              </p>
-              <div style="height:15px"></div>
+		      <!-- First Step -->
+		      <li class="completed">
+		        <a href="#!">
+		          <span class="circle">1</span>
+		          <span class="label">First step</span>
+		        </a>
+		      </li>
 
-              <!--Award 1-->
-              <div class="row mb-4">
-                <div class="col-1 text-center">
-                  <i class="fas fa-flask fa-lg indigo-text"></i>
-                </div>
-                <div class="col-5">
-                  <h6 class="feature-title">2nd place Men's Futsal</h6>
-                  <p class="grey-text">Chemistry Cup Universitas Negeri Jakarta 2016
-                  </p>
-                </div>
-                <!--Award 2-->
-                <div class="col-1 text-center">
-                  <i class="fas fa-atom fa-lg teal-text"></i>
-                </div>
-                <div class="col-5">
-                  <h6 class="feature-title">2nd place Men's Futsal</h6>
-                  <p class="grey-text">Physics Solidarity Game Universitas Negeri Jakarta 2017
-                  </p>
-                </div>
-              </div>
+		      <!-- Second Step -->
+		      <li class="active">
 
-              <!--Award 3-->
-              <div class="row mb-4">
-                <div class="col-1 text-center">
-                  <i class="fas fa-square-root-alt fa-lg teal-text"></i>
-                </div>
-                <div class="col-5">
-                  <h6 class="feature-title">2nd place Men's Volleyball</h6>
-                  <p class="grey-text">Math League Universitas Negeri Jakarta 2017
-                  </p>
-                </div>
-                <!--Award 4-->
-                <div class="col-1 text-center">
-                  <i class="fas fa-trophy fa-lg indigo-text"></i>
-                </div>
-                <div class="col-5">
-                  <h6 class="feature-title">Scholarship Awardee</h6>
-                  <p class="grey-text">Peningkatan Prestasi Akademik by Kemenristekdikti 2018
-                  </p>
-                </div>
-              </div>
+		        <!--Section Title -->
+		        <a href="#!">
+		          <span class="circle">2</span>
+		          <span class="label">Second step</span>
+		        </a>
 
-              <!--Award 5-->
-              <div class="row mb-4">
-                <div class="col-1 text-center">
-                  <i class="fas fa-dragon fa-lg indigo-text"></i>
-                </div>
-                <div class="col-5">
-                  <h6 class="feature-title">2nd place Story Telling</h6>
-                  <p class="grey-text">Festival Keilmiahan Matematika Universitas Negeri Jakarta 2019
-                  </p>
-                </div>
-                <!--Award 6-->
-                <div class="col-1 text-center">
-                  <i class="fas fa-file-alt fa-lg teal-text"></i>
-                </div>
-                <div class="col-5">
-                  <h6 class="feature-title">2nd place Essay</h6>
-                  <p class="grey-text">Harmoni Cinta Guru Universitas Negeri Jakarta 2019
-                  </p>
-                </div>
-              </div>
+		        <!-- Section Description -->
+		        <div class="step-content grey lighten-3">
+		          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse cupiditate voluptate facere
+		            iusto
+		            quaerat
+		            vitae excepturi, accusantium ut aliquam repellat atque nesciunt nostrum similique. Inventore
+		            nostrum
+		            ut,
+		            nobis porro sapiente.</p>
+		          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore error excepturi veniam nemo
+		            repellendus, distinctio soluta vitae at sit saepe. Optio eaque quia excepturi adipisci pariatur
+		            totam,
+		            atque odit fugiat.</p>
+		          <p>Deserunt voluptatem illum quae nisi soluta eum perferendis nesciunt asperiores tempore saepe
+		            reiciendis,
+		            vero quod a dolor corporis natus qui magni quas fuga rem excepturi laboriosam. Quisquam
+		            expedita ab
+		            fugiat.</p>
+		        </div>
+		      </li>
 
-          </div><div class="col-md-2"></div>
-          <!--/Grid column-->
+		      <!-- Third Step -->
+		      <li class="warning">
+		        <a href="#!">
+		          <span class="circle"><i class="fas fa-exclamation"></i></span>
+		          <span class="label">Third step</span>
+		        </a>
+		      </li>
 
-        </div>
-        <!--/Grid row-->
+		      <!-- Fourth Step -->
+		      <li>
+		        <a href="#!">
+		          <span class="circle">4</span>
+		          <span class="label">Fourth step</span>
+		        </a>
+		      </li>
+
+		    </ul>
+		    <!-- /.Stepers Wrapper -->
+
+		  </div>
+		</div>
+
+		<!-- Steppers Navigation -->
+		<div class="row mt-1">
+		  <div class="col-md-12 text-right">
+		    <button class="btn btn-flat btn-sm">Cancel</button>
+		    <button class="btn btn-primary btn-sm">Next</button>
+		  </div>
+		</div>
+		<!-- /.Vertical Steppers -->
 
       </section>
       <!--Section: Organizations-->
