set col stepper

--- a/index.html
+++ b/index.html
@@ -237,7 +237,11 @@
 
         <!-- Vertical Steppers -->
 		<div class="row mt-1">
-		  <div class="col-md-12">
+			<div class="col-md-2">
+			</div>
+			<div class="col-md-8">
+		  	<hr class="my-5">
+            <h3 class="h3 mb-4">Organizations</h3>
 
 		    <!-- Stepers Wrapper -->
 		    <ul class="stepper stepper-vertical">
@@ -300,6 +304,8 @@
 		    <!-- /.Stepers Wrapper -->
 
 		  </div>
+			<div class="col-md-2">
+			</div>
 		</div>
 
 		<!-- Steppers Navigation -->
