--- a/index.html
+++ b/index.html
@@ -236,13 +236,12 @@
       <section id="org">
 
         <!-- Vertical Steppers -->
-		<div class="row mt-1">
+		<div class="row wow fadeIn mt-1">
 			<div class="col-md-2">
 			</div>
 			<div class="col-md-8">
-		  	<hr class="my-5">
+				<hr class="my-5">
             <h3 class="h3 mb-4">Organizations</h3>
-
 		    <!-- Stepers Wrapper -->
 		    <ul class="stepper stepper-vertical">
 
@@ -307,15 +306,6 @@
 			<div class="col-md-2">
 			</div>
 		</div>
-
-		<!-- Steppers Navigation -->
-		<div class="row mt-1">
-		  <div class="col-md-12 text-right">
-		    <button class="btn btn-flat btn-sm">Cancel</button>
-		    <button class="btn btn-primary btn-sm">Next</button>
-		  </div>
-		</div>
-		<!-- /.Vertical Steppers -->
 
       </section>
       <!--Section: Organizations-->
