minor update award detail

--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                   <i class="fas fa-flask fa-lg indigo-text"></i>
                 </div>
                 <div class="col-5">
-                  <h6 class="feature-title" style="font-size: 18px">2nd place Men's Futsal</h6>
-                  <p class="grey-text" style="font-size: 18px">Chemistry Cup Universitas Negeri Jakarta 2016
+                  <h6 class="feature-title">2nd place Men's Futsal</h6>
+                  <p class="grey-text">Chemistry Cup Universitas Negeri Jakarta 2016
                   </p>
                 </div>
                 <!--Award 2-->
@@ -182,8 +182,8 @@
                   <i class="fas fa-atom fa-lg teal-text"></i>
                 </div>
                 <div class="col-5">
-                  <h6 class="feature-title" style="font-size: 18px">2nd place Men's Futsal</h6>
-                  <p class="grey-text" style="font-size: 18px">Physics Solidarity Game Universitas Negeri Jakarta 2017
+                  <h6 class="feature-title">2nd place Men's Futsal</h6>
+                  <p class="grey-text">Physics Solidarity Game Universitas Negeri Jakarta 2017
                   </p>
                 </div>
               </div>
@@ -194,8 +194,8 @@
                   <i class="fas fa-square-root-alt fa-lg teal-text"></i>
                 </div>
                 <div class="col-5">
-                  <h6 class="feature-title" style="font-size: 18px">2nd place Men's Volleyball</h6>
-                  <p class="grey-text" style="font-size: 18px">Math League Universitas Negeri Jakarta 2017
+                  <h6 class="feature-title">2nd place Men's Volleyball</h6>
+                  <p class="grey-text">Math League Universitas Negeri Jakarta 2017
                   </p>
                 </div>
                 <!--Award 4-->
@@ -203,8 +203,8 @@
                   <i class="fas fa-trophy fa-lg indigo-text"></i>
                 </div>
                 <div class="col-5">
-                  <h6 class="feature-title" style="font-size: 18px">Scholarship Awardee</h6>
-                  <p class="grey-text" style="font-size: 18px">Peningkatan Prestasi Akademik by Kemenristekdikti 2018
+                  <h6 class="feature-title">Scholarship Awardee</h6>
+                  <p class="grey-text">Peningkatan Prestasi Akademik by Kemenristekdikti 2018
                   </p>
                 </div>
               </div>
@@ -215,8 +215,8 @@
                   <i class="fas fa-dragon fa-lg indigo-text"></i>
                 </div>
                 <div class="col-5">
-                  <h6 class="feature-title" style="font-size: 18px">2nd place Story Telling Competition</h6>
-                  <p class="grey-text" style="font-size: 18px">Festival Keilmiahan Matematika Universitas Negeri Jakarta 2019
+                  <h6 class="feature-title">2nd place Story Telling Competition</h6>
+                  <p class="grey-text">Festival Keilmiahan Matematika Universitas Negeri Jakarta 2019
                   </p>
                 </div>
                 <!--Award 6-->
@@ -224,8 +224,8 @@
                   <i class="fas fa-file-alt fa-lg teal-text"></i>
                 </div>
                 <div class="col-5">
-                  <h6 class="feature-title" style="font-size: 18px">2nd place Essay Competition</h6>
-                  <p class="grey-text" style="font-size: 18px">Harmoni Cinta Guru Universitas Negeri Jakarta 2019
+                  <h6 class="feature-title">2nd place Essay Competition</h6>
+                  <p class="grey-text">Harmoni Cinta Guru Universitas Negeri Jakarta 2019
                   </p>
                 </div>
               </div>
