--- a/index.html
+++ b/index.html
@@ -416,19 +416,17 @@
 
         </div>
         <!--Grid row-->
-
       </section>
       <!--Section: Main info-->
 
       <section id="award">
 
         <!--Grid row-->
-        <div class="row wow fadeIn">
+        <div class="wow fadeIn">
 
           <!--Grid column-->
-          <div class="col-md-2"></div>
-          <div class="col-sm-12 col-md-8">
-            <hr class="my-5">
+          <div class="col-sm-12 col-md-12">
+           
             <h3 class="h3 mb-4">Award</h3>
 
             <p class="text-justify" style="line-height: 1cm; font-size: 18px">
@@ -437,50 +435,8 @@
               </p>
               <div style="height:15px"></div>
 
-              <!--Award 1-->
-              <div class="row mb-4">
-                <div class="col-1 text-center">
-                  <i class="fas fa-flask fa-lg indigo-text"></i>
-                </div>
-                <div class="col-5">
-                  <h6 class="feature-title">2nd place Men's Futsal</h6>
-                  <p class="grey-text">Chemistry Cup Universitas Negeri Jakarta 2016
-                  </p>
-                </div>
-                <!--Award 2-->
-                <div class="col-1 text-center">
-                  <i class="fas fa-atom fa-lg teal-text"></i>
-                </div>
-                <div class="col-5">
-                  <h6 class="feature-title">2nd place Men's Futsal</h6>
-                  <p class="grey-text">Physics Solidarity Game Universitas Negeri Jakarta 2017
-                  </p>
-                </div>
-              </div>
-
-              <!--Award 3-->
-              <div class="row mb-4">
-                <div class="col-1 text-center">
-                  <i class="fas fa-square-root-alt fa-lg teal-text"></i>
-                </div>
-                <div class="col-5">
-                  <h6 class="feature-title">2nd place Men's Volleyball</h6>
-                  <p class="grey-text">Math League Universitas Negeri Jakarta 2017
-                  </p>
-                </div>
-                <!--Award 4-->
-                <div class="col-1 text-center">
-                  <i class="fas fa-trophy fa-lg indigo-text"></i>
-                </div>
-                <div class="col-5">
-                  <h6 class="feature-title">Scholarship Awardee</h6>
-                  <p class="grey-text">Peningkatan Prestasi Akademik by Kemenristekdikti 2018
-                  </p>
-                </div>
-              </div>
-
               <!--Award 5-->
-              <div class="row">
+              <div class="row mb-5">
                 <div class="col-1 text-center">
                   <i class="fas fa-dragon fa-lg indigo-text"></i>
                 </div>
@@ -499,8 +455,6 @@
                   </p>
                 </div>
               </div>
-
-          </div><div class="col-md-2"></div>
           <!--/Grid column-->
 
         </div>
@@ -508,24 +462,6 @@
 
       </section>
       <!--Section: Award-->
-
-	<!--Section: Organizations-->
-	<section>
-		<div class="row wow fadeIn">
-			<!--Grid column-->
-          <div class="col-md-2"></div>
-          <div class="col-sm-12 col-md-8">
-            <hr class="my-5">
-            <p style="line-height: 1cm; font-size: 18px;" class="mb-4">
-            	Well, you have reached the final section. 
-            	Don't forget to like, share and subscribe! lol jk.
-            	It is all about me to know and now is your turn! 
-            </p>
-        </div>
-        <div class="col-md-2"></div>
-			
-		</div>
-	</section>
 
     </div>
   </main>
