--- a/index.html
+++ b/index.html
@@ -246,6 +246,21 @@
           </div>
           <!--Grid column-->
 
+          <!--Grid column-->
+          <div class="col-md-5 mb-4">
+
+            <!-- Project 1 Desc-->
+            <h3 class="h3 mb-3 pt-3">Official Letter Management Web</h3>
+            <p style="text-align: justify; font-size: 18px">This was my internship
+            period at Badan Nasional Penaggulangan Bencana (BNPB). We asked to develop 
+            a local website that could make them getting easy to manage the official letters.</p>
+
+            <p style="font-size: 18px;">Made with Code Igniter and Material Design Bootstrap.</p>
+            <!-- End of Project 1 Desc-->
+
+          </div>
+          <!--Grid column-->
+
         </div>
         <!--Grid row-->
 
