--- a/index.html
+++ b/index.html
@@ -261,6 +261,71 @@
           </div>
           <!--Grid column-->
 
+          <!--Grid column-->
+          <div class="col-md-6 mb-4">
+
+            <!--Carousel Wrapper-->
+              <div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel">
+                <!--Indicators-->
+                <ol class="carousel-indicators">
+                  <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
+                  <li data-target="#carousel-example-1z" data-slide-to="1"></li>
+                  <li data-target="#carousel-example-1z" data-slide-to="2"></li>
+                </ol>
+                <!--/.Indicators-->
+                <!--Slides-->
+                <div class="carousel-inner" role="listbox">
+                  <!--First slide-->
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(130).jpg"
+                      alt="First slide">
+                  </div>
+                  <!--/First slide-->
+                  <!--Second slide-->
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(129).jpg"
+                      alt="Second slide">
+                  </div>
+                  <!--/Second slide-->
+                  <!--Third slide-->
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg"
+                      alt="Third slide">
+                  </div>
+                  <!--/Third slide-->
+                </div>
+                <!--/.Slides-->
+                <!--Controls-->
+                <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+                <!--/.Controls-->
+              </div>
+              <!--/.Carousel Wrapper-->
+
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-md-5 mb-4">
+
+            <!-- Project 1 Desc-->
+            <h3 class="h3 mb-3 pt-3">National Science Festival Web</h3>
+            <p style="text-align: justify; font-size: 18px">To simplify essay exam procces 
+            and minimze use of papers, im involved in this research to develop a local 
+            Mathematics Department of UNJ website for arrange and conduct online daily or final essay exams.</p>
+
+            <p style="font-size: 18px;">Made with Laravel and Bootstrap 3 framework.</p>
+            <!-- End of Project 1 Desc-->
+
+          </div>
+          <!--Grid column-->
+
         </div>
         <!--Grid row-->
 
